core/src/main/web/app/styles/vendor_overrides.scss
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

.CodeMirror {
  clear: both;
  height: auto;
}

.CodeMirror-gutters {
  border: none;
  background-color: white;
}

.CodeMirror pre {
  z-index: initial;
}

.CodeMirror-lines div[style="position: relative; z-index: 1;"] {
  z-index: 0 !important;
}

.CodeMirror-fullscreen {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 9999;
  background: white !important;
  color: black;
}

.CodeMirror-hints {
  z-index: 150;
  font-family: $font-family-mono;
}

.CodeMirror-hint {
  max-width: unset;
}

.CodeMirror-lines {
  padding: 0;
}

.CodeMirror-linenumber {
  font-family: $font-family-mono;
  padding-left: 0;
  padding-right: 5px;
  min-width: $grid-gutter-width - 3px;
  cursor: pointer;
}

.CodeMirror-scroll {
  overflow-y: hidden !important;
  overflow-x: auto !important;
  height: auto;
}

div.CodeMirror {
  span.CodeMirror-matchingbracket {
    color: #40BF40;
  }
}

/* This is for datatables customization */
tbody tr {
  &, &.odd, &.even {
    &:hover, &.hover {
      table.dataTable.hover &, table.dataTable.display & {
        background-color: #99CCFF;

        td {
          background-color: transparent !important;
        }
      }

      &.selected {
        background-color: #6699FF;
      }
    }

    td {
      &.selected {
        background-color: #aab7d1 !important;
      }
    }
  }
}

.dataTables_scrollHead  table {
  thead th {
    cursor:       pointer;
    .bko-menu {
      float:      left;
      margin: -4px 0 0 -20px;
      opacity:    0;
      transition: opacity 0.5s;
    }

    &:hover {
      .bko-menu {
        opacity: 1;
        &:hover {
          background-color: $highlight-blue;
        }
      }
    }

    &.sorting_asc > .bko-menu {
      background-image: url("../images/sort_asc.png");
      background-size:  20px;
      opacity:          1;
    }

    &.sorting_desc > .bko-menu {
      background-image: url("../images/sort_desc.png");
      background-size:  20px;
      opacity:          1;
    }
  }

  thead .sorting, .sorting_asc, .sorting_desc {
    background-image: none !important;
  }
}

.DTFC_LeftHeadWrapper table {
  thead .sorting, .sorting_asc, .sorting_desc {
    background-image: none !important;
  }
}

// Bootstrap wants to keep focus styling on dropdowns
// after they are closed *shrug*
.navbar-default .navbar-nav > li > a {
  &:focus {
    color: $navbar-default-link-color;
    background-color: transparent;
  }
  &:hover {
    color: $navbar-default-link-hover-color !important;
    background-color: $navbar-default-link-hover-bg !important;
  }
}

bk-output-display .progress-bar {
  line-height: 21px;
}

// https://github.com/FortAwesome/Font-Awesome/issues/1606
.fa-hidden {
  visibility: hidden;
  width: 0;
}

.fa.fa-check {
  position: absolute;
  padding: 7px 4px 6px 4px;
}

table.DTFC_Cloned thead,
table.DTFC_Cloned tfoot {
  background-color: #E6E6E6;
}

.cm-tab {
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAMCAYAAAAkuj5RAAAAAXNSR0IArs4c6QAAAGFJREFUSMft1LsRQFAQheHPowAKoACx3IgEKtaEHujDjORSgWTH/ZOdnZOcM/sgk/kFFWY0qV8foQwS4MKBCS3qR6ixBJvElOobYAtivseIE120FaowJPN75GMu8j/LfMwNjh4HUpwg4LUAAAAASUVORK5CYII=);
  background-position: right;
  background-repeat: no-repeat;
}

.easy-form-container {
  .list-component-outer.hide-scrollbar select {
    overflow-y: hidden;
  }
}

